<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TipCalculator</string>
    <string name="action_settings">Settings</string>
    <string name="fifteen_percent">15%</string>
    <string name="eighteen_percent">18%</string>
    <string name="twenty_percent">20%</string>
    <string name="twentyfive_percent">25%</string>
    <string name="amount_hint">Enter Amount</string>
    <string name="tip_hint">Tip Amount</string>
    <string name="tip_label">Tip: $</string>
    <string name="total_hint">Total Amount</string>
    <string name="total_label">Total: $</string>
    <string name="amount_format">%.02f</string>
    <string name="per_person_total_hint">Total Per Person</string>
    <string name="per_person_total">Per Person: $</string>
    <string name="persons_per_party_default">1</string>
    <string name="minus_person">-</string>
    <string name="plus_person">+</string>
    <string name="pref_light_theme">Light Theme</string>
    <string name="pref_light_theme_summ">Use Holo Light Theme</string>
    
    <color name="charcol">#222222</color>
    <color name="light">#fff3f3f3</color>
    <color name="blue">#439CC8</color>
    <color name="white">#ffffff</color>
    <color name="gradient_end">#222222</color>
    <color name="gradient_start">#33999999</color>
    
</resources>
