<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/charcol"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/totalPerPersonView"
        style="@style/CustomDarkTheme"
        android:layout_alignLeft="@+id/tipTotalView"
        android:layout_alignRight="@+id/tipTotalView"
        android:layout_below="@+id/tipTotalView"
        android:layout_marginTop="26dp"
        android:hint="@string/per_person_total_hint" />

    <TextView
        android:id="@+id/totalView"
        style="@style/CustomDarkTheme"
        android:layout_alignLeft="@+id/totalPerPersonView"
        android:layout_alignRight="@+id/totalPerPersonView"
        android:layout_below="@+id/totalPerPersonView"
        android:layout_marginTop="27dp"
        android:hint="@string/total_hint" />

    <TextView
        android:id="@+id/personsPerParty"
        style="@style/CustomDarkTheme"
        android:layout_alignBaseline="@+id/minusPersonButton"
        android:layout_alignBottom="@+id/minusPersonButton"
        android:layout_alignLeft="@+id/eighteenButton"
        android:layout_alignRight="@+id/eighteenButton"
        android:gravity="center"
        android:text="@string/persons_per_party_default" />

    <Button
        android:id="@+id/minusPersonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/fifteenButton"
        android:layout_below="@+id/fifteenButton"
        android:layout_marginTop="19dp"
        android:onClick="decrementPeopleInParty"
        android:text="@string/minus_person" />

    <EditText
        android:id="@+id/billAmountText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/amount_hint"
        android:inputType="numberDecimal"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/fifteenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eighteenButton"
        android:layout_alignBottom="@+id/eighteenButton"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="34dp"
        android:onClick="calculateFifteenPercent"
        android:text="@string/fifteen_percent"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/twentyButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/eighteenButton"
        android:layout_alignBottom="@+id/eighteenButton"
        android:layout_alignParentRight="true"
        android:layout_marginRight="32dp"
        android:onClick="calculateTwentyPercent"
        android:text="@string/twenty_percent"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/eighteenButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/billAmountText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp"
        android:onClick="calculateEighteenPercent"
        android:text="@string/eighteen_percent"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/plusPersonButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/personsPerParty"
        android:layout_alignLeft="@+id/twentyButton"
        android:onClick="addPeopleInParty"
        android:text="@string/plus_person" />

    <TextView
        android:id="@+id/tipTotalView"
        style="@style/CustomDarkTheme"
        android:layout_alignLeft="@+id/minusPersonButton"
        android:layout_alignRight="@+id/plusPersonButton"
        android:layout_centerVertical="true"
        android:ems="10"
        android:hint="@string/tip_hint" />
    
</RelativeLayout>
